k8s/inventory-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
spec:
  selector:
    app: inventory-db
  ports:
    - port: 5432
      targetPort: 5432
