k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db
spec:
  ports:
    - port: 5432
